--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1218,3 +1218,23 @@ div.home-content {
     text-align: center;
   }
 }
+
+
+.blue-button {
+  display: inline-block;
+  font-family: Whitney, "Open Sans", Helvetica, sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  border-radius: 3px;
+  cursor: pointer;
+  height: 45px;
+  width: 55px;
+  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
+  padding: 0 !important;
+}
+
+.blue-button {
+  background-color:white;
+  border: 2px solid #7289da;
+  color: #fff;
+}
