--- a/views/home.hbs
+++ b/views/home.hbs
@@ -163,12 +163,12 @@
                 
 
             {{!-- <form class="notify-me" action="/api/email" method="POST"> --}}
-              <div class="registration__details" style="margin-top: 30px;">
+              <div id="devfolio_block" class="registration__details" style="margin-top: 30px;">
                 <div 
                 class="apply-button" 
                 data-hackathon-slug="inout2020" 
                 data-button-theme="light"
-                style="height: 44px; width: 312px;"
+                style="height: 44px;"
               >
               </div>
               <button class="blue-button" style="margin-left: 10px;">
