--- a/views/home.hbs
+++ b/views/home.hbs
@@ -172,7 +172,14 @@
               >
               </div>
               <button class="blue-button" style="margin-left: 10px;">
-                <a target="_blank" rel="noopener noreferrer" href="https://discord.com/invite/WvPdAbv5tP"><img src="img/2022/discord.png" style="height: 30px;"></a>
+                <a class="discord_container"target="_blank" rel="noopener noreferrer" href="https://discord.com/invite/WvPdAbv5tP">
+                <img class="discord_desktop" src="img/2022/discord.png" style="height: 30px;">
+                </a>
+              </button>
+              <button class="blue-button-mobile" style="background: white; margin-left: 10px;">
+                 <a class="discord_mobile" target="_blank" rel="noopener noreferrer" href="https://discord.com/invite/WvPdAbv5tP">
+                <img src="img/2022/discord_mobile.jpeg" style="height: 30px;">
+                </a>
               </button>
               </div>
             {{!-- </form> --}}
