sponsor urls + logo fixes + dc link

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -97,12 +97,12 @@
                 <a class="logo" href="#home">
                   <img
                     class="logo-alt-img"
-                    src="./img/2022/navbar_logo.png"
+                    src="./img/2022/new_logo.png"
                     alt="logo"
                   />
                    <img
                     class="logo-img"
-                    src="./img/2022/navbar_logo.png"
+                    src="./img/2022/new_logo.png"
                     alt="logo"
                   />
 
@@ -158,12 +158,17 @@
                   <h2 ><span>7-9</span>January 2022</h2>
                 </div>
               </div>
-
+            <form class="notify-me" action="/api/email" method="POST">
+              <div class="registration__details" style="margin-top: 30px;">
+                <input type="email" name="email" id="user-email" placeholder="Enter your email" >
+                <input type="submit" id="notify-btn" value="Notify Me">
+              </div>
+            </form>
               
                 
 
-            {{!-- <form class="notify-me" action="/api/email" method="POST"> --}}
-              <div class="registration__details" style="margin-top: 30px;">
+
+              {{!-- <div class="registration__details" style="margin-top: 30px;">
                 <div 
                 class="apply-button" 
                 data-hackathon-slug="inout2020" 
@@ -172,17 +177,17 @@
               >
               </div>
               <button class="blue-button" style="margin-left: 10px;">
-                <a class="discord_container"target="_blank" rel="noopener noreferrer" href="https://discord.com/invite/WvPdAbv5tP">
+                <a class="discord_container"target="_blank" rel="noopener noreferrer" href="https://discord.gg/c9q2Q5nQ">
                 <img class="discord_desktop" src="img/2022/discord.png" style="height: 30px;">
                 </a>
               </button>
               <button class="blue-button-mobile" style="background: white; margin-left: 10px;">
-                 <a class="discord_mobile" target="_blank" rel="noopener noreferrer" href="https://discord.com/invite/WvPdAbv5tP">
+                 <a class="discord_mobile" target="_blank" rel="noopener noreferrer" href="https://discord.gg/c9q2Q5nQ">
                 <img src="img/2022/discord_mobile.jpeg" style="height: 30px;">
                 </a>
               </button>
-              </div>
-            {{!-- </form> --}}
+              </div> --}}
+           
             </div>
             <div class="hero__content__banner">
               <div class="chat">
@@ -629,30 +634,30 @@
 																				justify-content: center;
 																				align-items: center;">
               <a href="https://www.github.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
-                <img src="img/sponsors/github.PNG" alt="">
+                <img src="img/sponsors/github.png" alt="">
               </a>
-              <a href="https://www.github.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
+              <a href="https://devfolio.co" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/sponsors/devfolio.png" alt="">
               </a>
-              <a href="https://www.github.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
+              <a href="https://polygon.technology/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/sponsors/polygon.png" alt="">
               </a>
-              <a href="https://www.github.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
+              <a href="https://tezos.com" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/sponsors/tezos.png" alt="">
               </a>
-              <a href="https://www.github.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
+              <a href="https://celo.org " target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/sponsors/celo.png" alt="">
               </a>
-              <a href="https://www.github.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
+              <a href="https://filecoin.io" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/sponsors/filecoin.png" alt="">
               </a>
-              <a href="https://www.github.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
+              <a href="https://replit.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/sponsors/replit.png" alt="">
               </a>
-              <a href="https://www.github.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
+              <a href="https://rosenfeldmedia.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/sponsors/rosenfeld.png" alt="">
               </a>
-              <a href="https://www.github.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
+              <a href="https://balsamiq.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/sponsors/balsamiq.png" alt="">
               </a>
             </div>
@@ -667,7 +672,7 @@
        
 
         <!-- become-sponsor -->
-        <div id="become-sponsor" class="section" style="margin-top: 100px;">
+        <div id="become-sponsor" class="section" style="margin-top: 50px;">
           <svg class="dotted-line" width="1920" height="859" viewBox="0 0 1920 859" fill="none" xmlns="http://www.w3.org/2000/svg">
             <defs>
               <style type="text/css">
@@ -997,9 +1002,9 @@
                 <a class="logo" href="#home">
                   <img
                     class="logo-img"
-                    src="./img/2022/footer_logo.png"
+                    src="./img/2022/new_logo.png"
                     alt="logo"
-                    style="max-height: 75px;"
+                    style="max-height: 50px; margin-right: 7px"
                   /> 
                 <span>Dot</span><span>Slash</span><span> 5.0</span>
                 </a>
