--- a/views/coc.hbs
+++ b/views/coc.hbs
@@ -88,8 +88,9 @@
             <a href="/" style="text-decoration: none;">
                 <img
                 class="logo-img"
-                src="./img/2022/navbar_logo.png"
+                src="./img/2022/new_logo.png"
                 alt="logo"
+                style="max-height: 60px; margin-right: 7px"
                 />
             <span>Dot</span><span>Slash</span>
             </a>
