--- a/views/home.hbs
+++ b/views/home.hbs
@@ -266,7 +266,7 @@
               />
             </div>
             <div class="row text-center" style="margin: auto 20px;">
-              <p style="font-size: 17px;">DotSlash​ is a 36 hours long hackathon which is completely
+              <p style="font-size: 17px;">DotSlash​ 5.0 is a 36 hours long hackathon which is completely
                   managed by students of SVNIT, Surat. It is a platform for
                   developers around the world to use their innovative skills to
                   produce something new and useful for the society.
@@ -277,7 +277,7 @@
               <p style="font-size: 17px;">
                 The limits are endless and the possiblities are infinite.
               </p>
-              <b style="color:  #bd0c0e; font-size: 17px;">Problem Statement will be provided at
+              <b style="color:  #bd0c0e; font-size: 17px;">Problem Statements will be provided at
                 the time of The Event.</b>
             </div>
             <br />
