--- a/views/home.hbs
+++ b/views/home.hbs
@@ -155,7 +155,7 @@
               
                <div class="hero__content__banner_slogan">
                 <div>
-                  <h2 ><span>7-9</span>January 2022</h2>
+                  <h2 ><span>7<sup>th</sup> - 9<sup>th</sup></span>Jan 2022</h2>
                 </div>
               </div>
             <form class="notify-me" action="/api/email" method="POST">
