--- a/views/home.hbs
+++ b/views/home.hbs
@@ -99,11 +99,13 @@
                     class="logo-alt-img"
                     src="./img/2022/new_logo.png"
                     alt="logo"
+                    style="max-height: 55px;"
                   />
                    <img
                     class="logo-img"
                     src="./img/2022/new_logo.png"
                     alt="logo"
+                    style="max-height: 55px;"
                   />
 
                 </a>
@@ -1004,7 +1006,7 @@
                     class="logo-img"
                     src="./img/2022/new_logo.png"
                     alt="logo"
-                    style="max-height: 50px; margin-right: 7px"
+                    style="max-height: 55px; margin-right: 7px"
                   /> 
                 <span>Dot</span><span>Slash</span><span> 5.0</span>
                 </a>
