--- a/views/home.hbs
+++ b/views/home.hbs
@@ -635,8 +635,9 @@
 																				flex-wrap: wrap;
 																				justify-content: center;
 																				align-items: center;">
+
               <a href="https://www.github.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
-                <img src="img/sponsors/github.png" alt="">
+                <img src="img/sponsors/github_logo.png" alt="">
               </a>
               <a href="https://devfolio.co" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/sponsors/devfolio.png" alt="">
