--- a/views/home.hbs
+++ b/views/home.hbs
@@ -210,7 +210,7 @@
                   <div class="message__content">What is the date of hackathon?</div>
                 </div>
                 <div class="message message--server">
-                  <div class="message__content">7-9 Jan 2022</div>
+                  <div class="message__content">7<sup>th</sup> - 9<sup>th</sup>Jan 2022</div>
                 </div>
                 <div class="message message--browser">
                   <div class="message__content">OK</div>
