--- a/views/home.hbs
+++ b/views/home.hbs
@@ -160,20 +160,20 @@
                   <h2 ><span>7<sup>th</sup> - 9<sup>th</sup></span>Jan 2022</h2>
                 </div>
               </div>
-            <form class="notify-me" action="/api/email" method="POST">
+            {{!-- <form class="notify-me" action="/api/email" method="POST">
               <div class="registration__details" style="margin-top: 30px;">
                 <input type="email" name="email" id="user-email" placeholder="Enter your email" >
                 <input type="submit" id="notify-btn" value="Notify Me">
               </div>
-            </form>
+            </form> --}}
               
                 
 
 
-              {{!-- <div class="registration__details" style="margin-top: 30px;">
+              <div class="registration__details" style="margin-top: 30px;">
                 <div 
                 class="apply-button" 
-                data-hackathon-slug="inout2020" 
+                data-hackathon-slug="dotslash-1" 
                 data-button-theme="light"
                 style="height: 44px; width: 312px;"
               >
@@ -188,7 +188,7 @@
                 <img src="img/2022/discord_mobile.jpeg" style="height: 30px;">
                 </a>
               </button>
-              </div> --}}
+              </div>
            
             </div>
             <div class="hero__content__banner">
