brochure + faqs update

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -780,9 +780,7 @@
                         >play_arrow</i></span>Who can participate?
 
                     </h3>
-                    <p class="collapse box1" id="num1">All students irrespective
-                      of any course are eligible to apply. If you are under 18
-                      years of age, we'll need a parental consent form.
+                    <p class="collapse box1" id="num1">All university students irrespective of any course are eligible to apply.
                     </p>
                     <br />
                     <h3
@@ -800,7 +798,7 @@
                     <p class="collapse box1" id="num2">Glad you asked.
                       <b>Its completely Free!!!</b></p>
                     <br />
-                    <h3
+                    {{!-- <h3
                       data-parent="#accordion"
                       data-toggle="collapse"
                       class="box arrow2 questions"
@@ -818,7 +816,7 @@
                       about your abilities from the past projects, GitHub
                       profile, participation/awards in other hackathons.
                     </p>
-                    <br />
+                    <br /> --}}
                     <h3
                       data-parent="#accordion"
                       data-toggle="collapse"
@@ -928,7 +926,7 @@
                     </h3>
                     <p class="collapse box1" id="num13">Due to the current
                       pandemic situation, mode of conduct will be online this
-                      year</p>
+                      year.</p>
                     <br />
                   </div>
                 </div>
