--- a/views/home.hbs
+++ b/views/home.hbs
@@ -627,10 +627,7 @@
                   >/ Partners</span>
                 </h3>
               </div>
-              <div class="row text-center">
-                <p><a href="https://acm-svnit.github.io/DotSlash4.0/">Check out
-                    our last year sponsor's here!</a></p>
-              </div>
+
               <div style="display: flex;
 																				flex-wrap: wrap;
 																				justify-content: center;
@@ -718,9 +715,13 @@
             <div class="container">
               <div class="row">
                 <div class="section-title">
-                  <h3 class="title"><span>Want to become a sponsor?</span></h3>
+                  <h3 class="title"><span>Want to become a sponsor?</span></h3>        
+                  <p>
+                    <a href="https://acm-svnit.github.io/DotSlash4.0/">Click here to see our last year sponsor's.</a>
+                  </p>          
                 </div>
               </div>
+              
               <div class="row">
                 <h4>
                   Contact us at
