font-awesome icon

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -717,7 +717,7 @@
                 <div class="section-title">
                   <h3 class="title"><span>Want to become a sponsor?</span></h3>        
                   <p>
-                    <a href="https://acm-svnit.github.io/DotSlash4.0/">Click here to see our last year sponsor's.</a>
+                    <a href="https://acm-svnit.github.io/DotSlash4.0/">Click here to see our last year sponsor's  <i class="fa fa-external-link" aria-hidden="true" style="margin-left: 5px;"></i></a>
                   </p>          
                 </div>
               </div>
@@ -858,9 +858,6 @@
                       schwags.
                     </p>
                     <br />
-
-                  </div>
-                  <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
                     <h3
                       data-parent="#accordion"
                       data-toggle="collapse"
@@ -877,6 +874,9 @@
                       provided with variety of theme options, once you get
                       selected.</p>
                     <br />
+                  </div>
+                  <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+                    
                     <h3
                       data-parent="#accordion"
                       data-toggle="collapse"
@@ -928,6 +928,22 @@
                     <p class="collapse box1" id="num13">Due to the current
                       pandemic situation, mode of conduct will be online this
                       year.</p>
+                    <br />
+
+                    <h3
+                      data-parent="#accordion"
+                      data-toggle="collapse"
+                      class="box arrow12 questions"
+                      href="#num14"
+                      style="cursor: pointer; font-weight: 300; text-decoration: none; color:white"
+                    >
+                      <span style="vertical-align: sub"><i
+                          class="material-icons prefix arrow-img12"
+                        >play_arrow</i></span>Where can I find updates?
+                    </h3>
+                    <p class="collapse box1" id="num14">Follow us on 
+                      <a href="https://www.instagram.com/hackatdotslash/"> Instagram </a> for all the updates. Also we will be reaching out to you via mail. To receive the updates through mail, kindly register for the hackathon.
+                    </p>
                     <br />
                   </div>
                 </div>
