font-awesome icon

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -942,7 +942,7 @@
                         >play_arrow</i></span>Where can I find updates?
                     </h3>
                     <p class="collapse box1" id="num14">Follow us on 
-                      <a href="https://www.instagram.com/hackatdotslash/"> Instagram </a> for all the updates. Also we will be reaching out to you via mail. To receive the updates through mail, kindly register for the hackathon.
+                      <a href="https://www.instagram.com/hackatdotslash/"> Instagram <i class="fa fa-external-link" aria-hidden="true" style="margin-left: 2px;"></i></a> for all the updates. Also we will be reaching out to you via mail. To receive the updates through mail, kindly register for the hackathon.
                     </p>
                     <br />
                   </div>
