--- a/views/home.hbs
+++ b/views/home.hbs
@@ -179,12 +179,12 @@
               >
               </div>
               <button class="blue-button" style="margin-left: 10px;">
-                <a class="discord_container"target="_blank" rel="noopener noreferrer" href="https://discord.gg/CERGGGBZMX">
+                <a class="discord_container"target="_blank" rel="noopener noreferrer" href="https://discord.gg/WvPdAbv5tP">
                 <img class="discord_desktop" src="img/2022/discord.png" style="height: 30px;">
                 </a>
               </button>
               <button class="blue-button-mobile" style="background: white; margin-left: 10px;">
-                 <a class="discord_mobile" target="_blank" rel="noopener noreferrer" href="https://discord.gg/CERGGGBZMX">
+                 <a class="discord_mobile" target="_blank" rel="noopener noreferrer" href="https://discord.gg/WvPdAbv5tP">
                 <img src="img/2022/discord_mobile.jpeg" style="height: 30px;">
                 </a>
               </button>
