--- a/views/home.hbs
+++ b/views/home.hbs
@@ -660,6 +660,9 @@
               <a href="https://balsamiq.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/sponsors/balsamiq.png" alt="">
               </a>
+              <a href="https://www.sketch.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/sponsors/sketch.png" alt="">
+              </a>
             </div>
               <!-- /row -->
             </div>
