--- a/views/home.hbs
+++ b/views/home.hbs
@@ -246,7 +246,7 @@
       <!-- /Hero -->
 
 
-      <div class="container tracks section">
+      <div id="about" class="container tracks section">
         <br /><br />
         <div class="row">
           <div class="col-xs-12">
@@ -300,7 +300,7 @@
 
       
       <!-- Supported By -->
-      <div id="about" class="section">
+      <div class="section">
         <!-- container -->
         <div class="container">
           <!-- row -->
@@ -720,7 +720,7 @@
                 <div class="section-title">
                   <h3 class="title"><span>Want to become a sponsor?</span></h3>        
                   <p>
-                    <a href="https://acm-svnit.github.io/DotSlash4.0/">Click here to see our last year sponsor's  <i class="fa fa-external-link" aria-hidden="true" style="margin-left: 5px;"></i></a>
+                    <a href="https://acm-svnit.github.io/DotSlash4.0/">Click here to see our last year sponsors  <i class="fa fa-external-link" aria-hidden="true" style="margin-left: 5px;"></i></a>
                   </p>          
                 </div>
               </div>
