--- a/views/home.hbs
+++ b/views/home.hbs
@@ -651,6 +651,12 @@
               <a href="https://filecoin.io" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/sponsors/filecoin.png" alt="">
               </a>
+              <a href="https://www.leadlearners.ca/" target="_blank" class="sponsor" rel="noopener noreferrer" style="padding: 0px !important;">
+                <img src="img/sponsors/leading_learners.png" alt="" style="width: 140px;">
+              </a>
+              <a href="https://www.geeksforgeeks.org/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/sponsors/gfg.png" alt="">
+              </a>
               <a href="https://replit.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/sponsors/replit.png" alt="">
               </a>
