--- a/views/home.hbs
+++ b/views/home.hbs
@@ -652,7 +652,7 @@
                 <img src="img/sponsors/filecoin.png" alt="">
               </a>
               <a href="https://www.leadlearners.ca/" target="_blank" class="sponsor" rel="noopener noreferrer" style="padding: 0px !important;">
-                <img src="img/sponsors/leading_learners.png" alt="" style="width: 140px;">
+                <img src="img/sponsors/leading_learners.png" alt="" style="width: 140px; margin-left: 35px; margin-right: 35px">
               </a>
               <a href="https://www.geeksforgeeks.org/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/sponsors/gfg.png" alt="">
