--- a/views/home.hbs
+++ b/views/home.hbs
@@ -839,9 +839,7 @@
                         >play_arrow</i></span>Can we apply as a team?
 
                     </h3>
-                    <p class="collapse box1" id="num4">Yes! This hackathon is a
-                      team competition. Most teams aim to have a mix of people
-                      with both design and developer skills. You can have a
+                    <p class="collapse box1" id="num4">Yes! You can have a
                       maximum of 3 members per team. If you don't have a team,
                       you can participate individually. We'll have team
                       formation at the time of hackathon.</p>
@@ -880,8 +878,7 @@
                       DotSlash?
                     </h3>
                     <p class="collapse box1" id="num9">Not to worry, you will be
-                      provided with variety of theme options, once you get
-                      selected.</p>
+                      provided with variety of theme options on the day of hackathon.</p>
                     <br />
                   </div>
                   <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
@@ -895,13 +892,10 @@
                     >
                       <span style="vertical-align: sub"><i
                           class="material-icons prefix arrow-img9"
-                        >play_arrow</i></span>What is the registration
-                      procedure?
-
+                        >play_arrow</i></span>What is the registration procedure?
                     </h3>
-                    <p class="collapse box1" id="num10">You have to apply
-                      online. Once you are selected we will inform you about the
-                      remaining procedure.</p>
+                    <p class="collapse box1" id="num10"> Simply click on "Apply with Devfolio" button on our website and fill out the form. RSVP and other details will be shared closer to the hackathon.
+                    </p>
                     <br />
                     <h3
                       data-parent="#accordion"
@@ -935,7 +929,7 @@
                       of hackathon?
                     </h3>
                     <p class="collapse box1" id="num13">Due to the current
-                      pandemic situation, mode of conduct will be online this
+                      pandemic situation, mode of conduct will be ONLINE this
                       year.</p>
                     <br />
 
@@ -950,7 +944,7 @@
                           class="material-icons prefix arrow-img12"
                         >play_arrow</i></span>Where can I find updates?
                     </h3>
-                    <p class="collapse box1" id="num14">Follow us on 
+                    <p class="collapse box1" id="num14">Join us on <a href=""> Discord <i class="fa fa-external-link" aria-hidden="true" style="margin-left: 2px;"></i></a> and follow us on 
                       <a href="https://www.instagram.com/hackatdotslash/"> Instagram <i class="fa fa-external-link" aria-hidden="true" style="margin-left: 2px;"></i></a> for all the updates. Also we will be reaching out to you via mail. To receive the updates through mail, kindly register for the hackathon.
                     </p>
                     <br />
