--- a/views/home.hbs
+++ b/views/home.hbs
@@ -681,7 +681,7 @@
        
 
         <!-- become-sponsor -->
-        <div id="become-sponsor" class="section" style="margin-top: 50px;">
+        <div id="become-sponsor" class="section" style="margin-top: 100px;">
           <svg class="dotted-line" width="1920" height="859" viewBox="0 0 1920 859" fill="none" xmlns="http://www.w3.org/2000/svg">
             <defs>
               <style type="text/css">
@@ -862,7 +862,7 @@
                       you will gain an unparalleled learning experience and
                       memories for a lifetime! You will also get a cool geeky
                       T-Shirt, Certificate of Participation and a bag full of
-                      schwags.
+                      swags.
                     </p>
                     <br />
                     <h3
@@ -944,7 +944,7 @@
                           class="material-icons prefix arrow-img12"
                         >play_arrow</i></span>Where can I find updates?
                     </h3>
-                    <p class="collapse box1" id="num14">Join us on <a href=""> Discord <i class="fa fa-external-link" aria-hidden="true" style="margin-left: 2px;"></i></a> and follow us on 
+                    <p class="collapse box1" id="num14">Join us on <a href="https://discord.gg/WvPdAbv5tP"> Discord <i class="fa fa-external-link" aria-hidden="true" style="margin-left: 2px;"></i></a> and follow us on 
                       <a href="https://www.instagram.com/hackatdotslash/"> Instagram <i class="fa fa-external-link" aria-hidden="true" style="margin-left: 2px;"></i></a> for all the updates. Also we will be reaching out to you via mail. To receive the updates through mail, kindly register for the hackathon.
                     </p>
                     <br />
