--- a/views/home.hbs
+++ b/views/home.hbs
@@ -622,9 +622,9 @@
           <div class="container">
             <div class="row">
               <div class="section-title">
-                <h3 class="title"><span style="color: white">Sponsors &nbsp;</span><span
+                <h3 class="title"><span style="color: white">Sponsors /&nbsp;</span><span
                     style="color: #bd0c0e;"
-                  >/ Partners</span>
+                  > Partners</span>
                 </h3>
               </div>
 
@@ -668,6 +668,9 @@
               </a>
               <a href="https://www.sketch.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/sponsors/sketch.png" alt="">
+              </a>
+              <a href="https://onec.in/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/sponsors/onecdot.png" alt="">
               </a>
             </div>
               <!-- /row -->
