--- a/views/home.hbs
+++ b/views/home.hbs
@@ -633,14 +633,17 @@
 																				justify-content: center;
 																				align-items: center;">
 
-              <a href="https://www.github.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
-                <img src="img/sponsors/github_logo.png" alt="">
+              <a href="https://www.tatvic.com/about-us/what-we-do/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/sponsors/tatvic.PNG" alt="">
               </a>
               <a href="https://devfolio.co" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/sponsors/devfolio.png" alt="">
               </a>
               <a href="https://polygon.technology/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/sponsors/polygon.png" alt="">
+              </a>
+              <a href="https://www.github.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/sponsors/github_logo.png" alt="">
               </a>
               <a href="https://tezos.com" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/sponsors/tezos.png" alt="">
@@ -650,6 +653,9 @@
               </a>
               <a href="https://filecoin.io" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/sponsors/filecoin.png" alt="">
+              </a>
+              <a href="https://symbl.ai/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/sponsors/symblAI.png" alt="">
               </a>
               <a href="https://onec.in/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/sponsors/onecdot.png" alt="">
