--- a/views/home.hbs
+++ b/views/home.hbs
@@ -126,7 +126,7 @@
               <ul class="main-nav nav navbar-nav navbar-right">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
-                {{!-- <li><a href="#schedule">Schedule</a></li> --}}
+                <li><a href="#schedule">Schedule</a></li>
                 <li><a href="#sponsors">Sponsors</a></li>
                 <li><a href="#faq">FAQs</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -268,19 +268,15 @@
               />
             </div>
             <div class="row text-center" style="margin: auto 20px;">
-              <p style="font-size: 17px;">DotSlash​ 5.0 is a 36 hours long hackathon which is completely
+              <p>DotSlash​ 5.0 is a <b style="color:#bd0c0e; font-size: 19px; ">36 hours</b> long <b style="color:#bd0c0e; font-size: 19px; ">ONLINE</b> hackathon which is completely
                   managed by students of SVNIT, Surat. It is a platform for
                   developers around the world to use their innovative skills to
                   produce something new and useful for the society.
               </p>
-              <p style="font-size: 17px;">Explore the realms of Web and Mobile based applications while
+              <p>Explore the realms of Web and Mobile based applications while
                 developing your ideas. You are free to use any framework and any
-                code fragment, until and unless it is open sourced.</p>
-              <p style="font-size: 17px;">
-                The limits are endless and the possiblities are infinite.
-              </p>
-              <b style="color:  #bd0c0e; font-size: 17px;">Problem Statements will be provided at
-                the time of The Event.</b>
+                code fragment, until and unless it is open sourced. The limits are endless and the possiblities are infinite.</p>
+              <span><b style="color:  #bd0c0e; font-size: 19px">Problem Statements will be released on 26th December.</b> <br/>Kindly checkout the full schedule below for more details.</span>
             </div>
             <br />
             <br />
@@ -497,7 +493,7 @@
       <!-- /Galery -->
 
 
-      {{!-- <div id="schedule" class="section" style="margin-top: 80px; color:#a5b3cf;">
+      <div id="schedule" class="section" style="margin-top: 80px; color:#a5b3cf;">
         <!-- container -->
         <div class="container">
           <!-- row -->
@@ -508,75 +504,91 @@
             </div>
             <div class="timeline">
               <div class="timeline-row">
-                <div class="timeline-time">1st Dec 11:59pm</div>
+                <div class="timeline-time">23rd Nov 6:00 pm</div>
                 <div class="timeline-content">
                   <h4>Registration Starts</h4>
                   <p >
-                    Hackers can team up with maximum 3 members per team and register on our website. If you don't have a team, you can participate individually.
+                    Registration for the fifth edition of DotSlash hackathon begins! Click on the "Apply with Devfolio" button on our website and fill out your details. You can always register individually and form a team later. RSVP will be done closer to the hackathon.
                   </p>
                 </div>
               </div>
 
               <div class="timeline-row">
-                <div class="timeline-time">24th Dec 11:59pm</div>
-                <div class="timeline-content">
-                  <h4>Problem Statements Released</h4>
-                  <p >
-                    Participating Teams will have to select any one of the problem
-                    statements released and build their hack around it during the
-                    hackathon.
-                  </p>
-                </div>
-              </div>
-
-              <div class="timeline-row">
-                <div class="timeline-time">27th Dec - 6th Jan </div>
+                <div class="timeline-time">20th Dec - 5th Jan</div>
                 <div class="timeline-content">
                   <h4>Workshop Series</h4>
-                  <p>
-                    Each evening we will be conducting a session by our Speakers around the tech-stacks, their products, or some other topics on startups, Mental Health, etc.
+                  <p >
+                    Every evening an informative speaker session will be conducted. The platform and link for the session will be shared on our website and Discord server before the event date. 
                   </p>
                 </div>
               </div>
 
               <div class="timeline-row">
-                <div class="timeline-time">6th Jan 11:59pm </div>
+                <div class="timeline-time">26th Dec 6:00 pm</div>
                 <div class="timeline-content">
-                  <h4>Idea Submission</h4>
+                  <h4>Release of Problem Statements </h4>
                   <p>
-                   Participating Teams will have to select any one of the problem statements released and submit an idea about how they are planning to go about their hack.
+                    Problem statements focussing on the most recent and trending topics in the field of research and development will be released.
                   </p>
                 </div>
               </div>
 
               <div class="timeline-row">
-                <div class="timeline-time">7th Jan 8:00pm </div>
+                <div class="timeline-time">4th Jan 11:59 pm</div>
                 <div class="timeline-content">
-                  <h4>Top 50 Ideas Declared</h4>
+                  <h4>Registration Ends</h4>
                   <p>
-                   The top 50 teams with original, interesting and feasible ideas will be selected and invited to build their hack during the hackathon.
+                    This is the end of the registration phase. Teams should ensure all their members have registered on Devfolio before this date. 
                   </p>
                 </div>
               </div>
 
               <div class="timeline-row">
-                <div class="timeline-time">7th Jan 11:00pm</div>
+                <div class="timeline-time">4th Jan 11:59 pm </div>
+                <div class="timeline-content">
+                  <h4>Idea Submission </h4>
+                  <p>
+                   Participating teams will have to select any one of the problem statements and submit an idea about how they are planning to go about their hack.
+                  </p>
+                </div>
+              </div>
+
+              <div class="timeline-row">
+                <div class="timeline-time">7th Jan 7:00 pm</div>
+                <div class="timeline-content">
+                  <h4>Opening Ceremony</h4>
+                  <p>
+                    The inauguration ceremony of DotSlash 5.0 will start. Participants will be briefed on rules and regulations, schedules, and other information regarding the hackathon.
+                  </p>
+                </div>
+              </div>
+
+              <div class="timeline-row">
+                <div class="timeline-time">7th Jan 9:00 pm</div>
                 <div class="timeline-content">
                   <h4>Virtual Onboarding</h4>
                   <p>
-                   The teams will be checked in before the main event commences. Participants are requested to make sure that their team members are present and all the prerequisites for the event are fulfilled.
+                    Teams will be checked in before the main event commences. Participants are requested to make sure that their team members are present and all the prerequisites for the event are fulfilled.
                   </p>
                 </div>
               </div>
 
               <div class="timeline-row">
-                <div class="timeline-time">7th Jan 11:59pm </div>
+                <div class="timeline-time">7th Jan 10:00 pm </div>
                 <div class="timeline-content">
-                  <h4>Hackathon Begins</h4>
+                  <h4>Hacking Starts</h4>
                   <p>
-                    Coding time starts! The participating teams can utilize their
-                    private team rooms on discord server to discuss and develop their
-                    hack based on their chosen problem statement
+                    Coding time starts! The participating teams can utilize their private team rooms on the discord server to discuss and develop their hack based on their chosen problem statement.
+                  </p>
+                </div>
+              </div>
+
+              <div class="timeline-row">
+                <div class="timeline-time">9th Jan 10:00 am </div>
+                <div class="timeline-content">
+                  <h4>Final Submission - Coding Time Ends</h4>
+                  <p>
+                    This is the end of the 36 hour coding period. Teams will have to submit their final work. After this point, no addition to the project will be allowed.
                   </p>
                 </div>
               </div>
@@ -584,7 +596,7 @@
             </div>
           </div>
         </div>
-      </div> --}}
+      </div>
       
       <div class="tracks container section">
         <div class="modal" tabindex="-1" role="dialog">
@@ -803,11 +815,61 @@
                     <p class="collapse box1" id="num1">All university students irrespective of any course are eligible to apply.
                     </p>
                     <br />
+
+                    <h3
+                      data-parent="#accordion"
+                      data-toggle="collapse"
+                      class="box arrow9 questions"
+                      href="#num2"
+                      style="cursor: pointer; font-weight: 300; text-decoration: none; color:white"
+                    >
+                      <span style="vertical-align: sub"><i
+                          class="material-icons prefix arrow-img9"
+                        >play_arrow</i></span>What is the registration procedure?
+                    </h3>
+                    <p class="collapse box1" id="num2"> Simply click on "Apply with Devfolio" button on our website and fill out the form. RSVP and other details will be shared closer to the hackathon.
+                    </p>
+                    <br />
+
+                    <h3
+                      data-parent="#accordion"
+                      data-toggle="collapse"
+                      class="box arrow3 questions"
+                      href="#num3"
+                      style="cursor: pointer; font-weight: 300; text-decoration: none; color:white"
+                    >
+                      <span style="vertical-align: sub"><i
+                          class="material-icons prefix arrow-img3"
+                        >play_arrow</i></span>Can we apply as a team?
+
+                    </h3>
+                    <p class="collapse box1" id="num3">Yes! You can have a
+                      maximum of 3 members per team. If you don't have a team,
+                      you can participate individually. We'll have team
+                      formation at the time of hackathon.</p>
+                    <br />
+                    
+                    <h3
+                      data-parent="#accordion"
+                      data-toggle="collapse"
+                      class="box arrow3 questions"
+                      href="#num4"
+                      style="cursor: pointer; font-weight: 300; text-decoration: none; color:white"
+                    >
+                      <span style="vertical-align: sub"><i
+                          class="material-icons prefix arrow-img3"
+                        >play_arrow</i></span>What does “Application Under Review” mean on Devfolio dashboard?
+
+                    </h3>
+                    <p class="collapse box1" id="num4">It means we have successfully received your application. Once you submit your idea after the problem statements are released, we will accept you for our hackathon. Please note that at this stage the submitted ideas will not be evaluated. </p>
+                    <br />
+
+                    
                     <h3
                       data-parent="#accordion"
                       data-toggle="collapse"
                       class="box arrow1 questions"
-                      href="#num2"
+                      href="#num5"
                       style="cursor: pointer; font-weight: 300; text-decoration: none; color:white"
                     >
                       <span style="vertical-align: sub"><i
@@ -815,9 +877,11 @@
                         >play_arrow</i></span>What is the Registration fee for
                       hackathon?
                     </h3>
-                    <p class="collapse box1" id="num2">Glad you asked.
+                    <p class="collapse box1" id="num5">Glad you asked.
                       <b>Its completely Free!!!</b></p>
                     <br />
+
+
                     {{!-- <h3
                       data-parent="#accordion"
                       data-toggle="collapse"
@@ -837,28 +901,33 @@
                       profile, participation/awards in other hackathons.
                     </p>
                     <br /> --}}
+                  </div>
+
+
+                  <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+                    
                     <h3
                       data-parent="#accordion"
                       data-toggle="collapse"
-                      class="box arrow3 questions"
-                      href="#num4"
+                      class="box arrow12 questions"
+                      href="#num6"
                       style="cursor: pointer; font-weight: 300; text-decoration: none; color:white"
                     >
                       <span style="vertical-align: sub"><i
-                          class="material-icons prefix arrow-img3"
-                        >play_arrow</i></span>Can we apply as a team?
-
+                          class="material-icons prefix arrow-img12"
+                        >play_arrow</i></span>What will be the mode of conduct
+                      of hackathon?
                     </h3>
-                    <p class="collapse box1" id="num4">Yes! You can have a
-                      maximum of 3 members per team. If you don't have a team,
-                      you can participate individually. We'll have team
-                      formation at the time of hackathon.</p>
+                    <p class="collapse box1" id="num6">Due to the current
+                      pandemic situation, mode of conduct will be ONLINE this
+                      year.</p>
                     <br />
+
                     <h3
                       data-parent="#accordion"
                       data-toggle="collapse"
                       class="box arrow4 questions"
-                      href="#num5"
+                      href="#num7"
                       style="cursor: pointer; font-weight: 300; text-decoration: none; color:white"
                     >
                       <span style="vertical-align: sub"><i
@@ -866,7 +935,7 @@
                         >play_arrow</i></span>What do I get by attending
                       DotSlash?
                     </h3>
-                    <p class="collapse box1" id="num5">Pretty much everything
+                    <p class="collapse box1" id="num7">Pretty much everything
                       from socializing with fellow hacker communities. And yeah
                       we’ll have prizes for 1st, 2nd, 3rd place. Most of all,
                       you will gain an unparalleled learning experience and
@@ -875,11 +944,12 @@
                       swags.
                     </p>
                     <br />
+
                     <h3
                       data-parent="#accordion"
                       data-toggle="collapse"
                       class="box arrow8 questions"
-                      href="#num9"
+                      href="#num8"
                       style="cursor: pointer; font-weight: 300; text-decoration: none; color:white text-decoration: none; color:white"
                     >
                       <span style="vertical-align: sub"><i
@@ -887,26 +957,10 @@
                         >play_arrow</i></span>What will be the theme for
                       DotSlash?
                     </h3>
-                    <p class="collapse box1" id="num9">Not to worry, you will be
-                      provided with variety of theme options on the day of hackathon.</p>
+                    <p class="collapse box1" id="num8">Not to worry, the problem statements will be based on a variety of theme options.</p>
                     <br />
-                  </div>
-                  <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                    
-                    <h3
-                      data-parent="#accordion"
-                      data-toggle="collapse"
-                      class="box arrow9 questions"
-                      href="#num10"
-                      style="cursor: pointer; font-weight: 300; text-decoration: none; color:white"
-                    >
-                      <span style="vertical-align: sub"><i
-                          class="material-icons prefix arrow-img9"
-                        >play_arrow</i></span>What is the registration procedure?
-                    </h3>
-                    <p class="collapse box1" id="num10"> Simply click on "Apply with Devfolio" button on our website and fill out the form. RSVP and other details will be shared closer to the hackathon.
-                    </p>
-                    <br />
+
+
                     <h3
                       data-parent="#accordion"
                       data-toggle="collapse"
@@ -926,22 +980,7 @@
                       help you with your project.</p>
                     <br />
 
-                    <h3
-                      data-parent="#accordion"
-                      data-toggle="collapse"
-                      class="box arrow12 questions"
-                      href="#num13"
-                      style="cursor: pointer; font-weight: 300; text-decoration: none; color:white"
-                    >
-                      <span style="vertical-align: sub"><i
-                          class="material-icons prefix arrow-img12"
-                        >play_arrow</i></span>What will be the mode of conduct
-                      of hackathon?
-                    </h3>
-                    <p class="collapse box1" id="num13">Due to the current
-                      pandemic situation, mode of conduct will be ONLINE this
-                      year.</p>
-                    <br />
+                    
 
                     <h3
                       data-parent="#accordion"
