--- a/views/prizes.hbs
+++ b/views/prizes.hbs
@@ -105,8 +105,8 @@
               <ul class="main-nav nav navbar-nav navbar-right">
                 <li><a href="/#home">Home</a></li>
                 <li><a href="/#about">About</a></li>
-                {{!-- <li><a href="#schedule">Schedule</a></li> --}}
                 <li><a href="#">Prizes</a></li>
+                <li><a href="/#schedule">Schedule</a></li>
                 <li><a href="/#sponsors">Sponsors</a></li>
                 <li><a href="/#faq">FAQs</a></li>
                 <li><a href="/#contact">Contact</a></li>
